[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/energy_zap.png" type="Texture" id=1]
[ext_resource path="res://scenes/spells/ENERGY_ZAP.gd" type="Script" id=2]
[ext_resource path="res://scenes/spells/ENERGY_ZAP_MAIN.gd" type="Script" id=3]

[node name="EnergyZap" type="Area2D"]
script = ExtResource( 3 )

[node name="zap1" type="Node2D" parent="."]
visible = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="zap1"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="zap2" type="Node2D" parent="."]
visible = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="zap2"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="zap3" type="Node2D" parent="."]
visible = false
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="zap3"]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="endTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="endTimer" to="." method="_on_endTimer_timeout"]
